--- a/css/respuestas.css
+++ b/css/respuestas.css
@@ -9,9 +9,9 @@
 }
 
 .ttitulo{
-    border:1px solid black;
-    background-color:gray;
-    color:black;
+    border:1px solid white;
+    background-color:black;
+    color:white;
 }
 
 .trmain th{
